# nu_plugin_regex

./: Cargo.toml  readme.md
src/: main.rs  regex_.rs
