[package]
name = "nu_plugin_regex"
version = "0.5.0"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_regex"
description = "nu plugin to search text with regex"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nu-plugin = "0.74.0"
# nu-protocol = "0.74.0"
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.92.2" }
nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.92.2" }
fancy-regex = "0.13.0"
