[package]
name = "nu_plugin_regex"
version = "0.18.0"
authors = ["Darren Schroeder"]
edition = "2024"
repository = "https://github.com/fdncred/nu_plugin_regex"
description = "nu plugin to search text with regex"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nushell dependencies
nu-plugin = "0.109.0"
nu-protocol = "0.109.0"
nu-path = "0.109.0"

# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.98.0" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.98.0" }
# nu-path = { path = "../nushell/crates/nu-path", version = "0.98.0" }

fancy-regex = "0.16.2"

[dev-dependencies]
nu-plugin-test-support = "0.109.0"
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"

[profile.dev]
opt-level = 0
